[package]
name = "gluesql"
version = "0.8.0"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition = "2018"
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"
readme = "README.md"
keywords = [
	"sql-database",
	"sql",
	"functional",
	"no-mut-in-the-middle",
	"webassembly",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["memory-storage", "alter-table", "sorter"]

# optional: ALTER TABLE
# you can include whether ALTER TABLE support or not for your custom database implementation.
alter-table = []

# optional: INDEX
index = []

# optional: TRANSACTION
transaction = []

# optional: ORDER BY for non-indexed expressions
# disable this feature if you use GlueSQL for big data analysis.
sorter = []

# for someone who wants to make a custom storage engine,
# default storage engine sled-storage is not required.
sled-storage = ["transaction", "index", "sled", "bincode"]

# BTreeMap based in-memory storage
memory-storage = ["sorter"]

[dependencies]
regex = { git = "https://github.com/mesalock-linux/regex-sgx.git" }
async-trait = "0.1"
async-recursion = "0.3"
cfg-if = "1"
chrono = { git = "https://github.com/EmisonLu/chrono-sgx.git" }
rust_decimal = { git = "https://github.com/EmisonLu/rust-decimal.git" }
futures = { git = "https://github.com/lengyijun/futures-rs.git" }
indexmap = { git = "https://github.com/mesalock-linux/indexmap-sgx.git" }
im-rc = { path = "../im-rc" }
iter-enum = "1"
itertools = { git = "https://github.com/mesalock-linux/rust-itertools-sgx.git"}
pin-project = "1.0"
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
sqlparser = { path = "../sqlparser-rs", default-features = false, features = [] }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
strum = "0.21"
strum_macros = "0.21"
uuid = { git = "https://github.com/mesalock-linux/uuid-sgx.git", features = ["v4"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

# dependencies for sled-storage
bincode = { version = "1.3", optional = true }
sled = { version = "0.34.6", optional = true }

[dev-dependencies]
tokio = { version = "1.9", features = ["macros", "rt"] }
criterion = "0.3"

[[bench]]
name = "sled_benchmark"
harness = false

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_alloc = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace_sys = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_build_helper = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_cov = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_crypto_helper = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_demangle = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_libc = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_no_tstd = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand_derive = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive_internals = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto_helper = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tdh = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tkey_exchange = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tprotected_fs = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tseal = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tunittest = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_ucrypto = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_unwind = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { branch = "v1.1.4-testing", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }